# clearsmog

./: .env.example  .gitignore  main.py  pyproject.toml
clearsmog/: comment_builder.py  comment_manager.py  config.py  github_auth.py  github_client.py  main.py  models.py  notebook_diff.py
example/: test-notebook.ipynb
tests/: test_comment_builder.py  test_comment_manager.py  test_notebook_diff.py
tests/fixtures/: notebook_new.ipynb  notebook_old.ipynb
